report: update references

--- a/reports/references.bib
+++ b/reports/references.bib
@@ -1,50 +1,90 @@
-@article{lewis2020retrieval,
-  title={Retrieval-augmented generation for knowledge-intensive nlp tasks},
-  author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others},
-  journal={Advances in Neural Information Processing Systems},
-  volume={33},
-  pages={9459--9474},
-  year={2020}
+@misc{es2023ragasautomatedevaluationretrieval,
+      title={RAGAS: Automated Evaluation of Retrieval Augmented Generation}, 
+      author={Shahul Es and Jithin James and Luis Espinosa-Anke and Steven Schockaert},
+      year={2023},
+      eprint={2309.15217},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2309.15217}, 
 }
 
-@article{deng2023ragas,
-  title={RAGAS: Automated Evaluation of Retrieval Augmented Generation},
-  author={Deng, Shahul Es and Bae, Jinheon and Pasumarthi, Rak Garg and Chintam, Saransh and Chandra, Lucian and Chen, Zhuyun and Craswell, Nick},
-  journal={arXiv preprint arXiv:2309.15217},
-  year={2023}
+@misc{zhang2020bertscoreevaluatingtextgeneration,
+      title={BERTScore: Evaluating Text Generation with BERT}, 
+      author={Tianyi Zhang and Varsha Kishore and Felix Wu and Kilian Q. Weinberger and Yoav Artzi},
+      year={2020},
+      eprint={1904.09675},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/1904.09675}, 
 }
 
-@article{zhang2020bertscore,
-  title={BERTScore: Evaluating Text Generation with BERT},
-  author={Zhang, Tianyi and Kishore, Varsha and Wu, Felix and Weinberger, Kilian Q and Artzi, Yoav},
-  journal={arXiv preprint arXiv:1904.09675},
-  year={2020}
+@misc{cohere2024basicrag,
+      title={Basic RAG: Retrieval-Augmented Generation with Cohere},
+      author={Cohere},
+      year={2024},
+      url={https://docs.cohere.com/page/basic-rag},
 }
 
-@article{gao2023retrieval,
-  title={Retrieval-augmented generation for large language models: A survey},
-  author={Gao, Yunfan and Xiong, Yun and Gao, Xinyu and Yu, Xiangnan and Chen, Shirong and Deng, Meng and Chen, Jingkun and Li, Jipeng and Wu, Han and Du, Zidong and others},
-  journal={arXiv preprint arXiv:2312.10997},
-  year={2023}
+@misc{ragas2024availablemetrics,
+      title={Ragas: List of available metrics},
+      author={Ragas Team},
+      year={2024},
+      url={https://docs.ragas.io/en/latest/concepts/metrics/available_metrics/},
 }
 
-@article{izacard2022atlas,
-  title={Atlas: Few-shot learning with retrieval augmented language models},
-  author={Izacard, Gautier and Lewis, Patrick and Lomeli, Maria and Hosseini, Lucas and Petroni, Fabio and Schick, Timo and Dwivedi-Yu, Jane and Joulin, Armand and Riedel, Sebastian and Grave, Edouard},
-  journal={arXiv preprint arXiv:2208.03299},
-  year={2022}
+@misc{langchain2024evaluaterag,
+      title={Evaluate a RAG application},
+      author={LangChain},
+      year={2024},
+      url={https://docs.smith.langchain.com/evaluation/tutorials/rag#correctness-response-vs-reference-answer},
 }
 
-@article{ram2023incontext,
-  title={In-context retrieval-augmented language models},
-  author={Ram, Ori and Levine, Yoav and Dalmedigos, Itay and Muhlgay, Dor and Shlomi, Oren and Bertsch, Ariel and Ozdowy, Avi and Shayovitz, Idan and Sadde, Avinatan and Abend, Omri and Shashua, Amnon},
-  journal={arXiv preprint arXiv:2302.00083},
-  year={2023}
+@misc{langchain2024evaluationconcepts,
+      title={Evaluation concepts},
+      author={LangChain},
+      year={2024},
+      url={https://docs.smith.langchain.com/evaluation/concepts#experiment},
 }
 
-@article{shi2023replug,
-  title={Replug: Retrieval-augmented black-box language models},
-  author={Shi, Weijia and Vyas, Sewon and Shang, Jialin and Lewis, Patrick and Hashimoto, Tatsunori B and Yih, Scott Wen-tau and Zettlemoyer, Luke},
-  journal={arXiv preprint arXiv:2301.12652},
-  year={2023}
+@misc{langchain2024evaluateexperiment,
+      title={How to evaluate an existing experiment},
+      author={LangChain},
+      year={2024},
+      url={https://docs.smith.langchain.com/evaluation/how_to_guides/evaluate_existing_experiment},
+}
+
+@misc{saha2024benchmarkinghallucination,
+      title={Benchmarking Hallucination Detection Methods in RAG},
+      author={Saha, Subham},
+      year={2024},
+      publisher={Towards Data Science},
+      url={https://towardsdatascience.com/benchmarking-hallucination-detection-methods-in-rag-6a03c555f063/},
+}
+
+@misc{deepeval2024geval,
+      title={G-Eval},
+      author={Deepeval},
+      year={2024},
+      url={https://www.deepeval.com/docs/metrics-llm-evals},
+}
+
+@misc{deepeval2024faithfulness,
+      title={Faithfulness},
+      author={Deepeval},
+      year={2024},
+      url={https://www.deepeval.com/docs/metrics-faithfulness},
+}
+
+@misc{zhang2020bertscore,
+      title={BERTScore},
+      author={Zhang, Tianyi and Kishore, Varsha and Wu, Felix and Weinberger, Kilian Q. and Artzi, Yoav},
+      year={2020},
+      url={https://github.com/Tiiiger/bert_score},
+}
+
+@misc{anthropic2024claude,
+      title={Claude},
+      author={Anthropic},
+      year={2024},
+      note={Large language model used to help distill paper draft from originally 8 pages, and with R-markdown syntax},
 }
