report: distill further

--- a/reports/rag_experimentation_report.Rmd
+++ b/reports/rag_experimentation_report.Rmd
@@ -61,15 +61,9 @@ Finally, statistical significance was confirmed through ANOVA and regression ana
 
 ## Testing and Evaluation
 
-System performance was measured using 13 distinct metrics that fall into three main groups. The first group comprises Simple Metrics, which use a binary LLM-as-judge approach. These include measures of Groundedness (whether the RAG response is factually consistent with the provided context), Retrieval Relevance (if the retrieved documents are pertinent to the question), Relevance (whether the answer is aligned with the question), and Correctness (if the answer agrees with the reference ground truth). These metrics were implemented manually, following guidance from a tutorial from LangChain's documentation[@langchain2024evaluaterag].
+System performance was measured using 13 distinct metrics across three categories: (1) Simple Metrics using binary LLM-as-judge approach (Groundedness, Retrieval Relevance, Relevance, and Correctness); (2) RAGAS Metrics[@es2023ragasautomatedevaluationretrieval][@ragas2024availablemetrics] with normalized LLM-as-judge scoring (Faithfulness, Context Relevance, Response Relevance, and Answer Accuracy); and (3) additional metrics including DeepEval G-Eval, DeepEval Faithfulness, BERTScore[@zhang2020bertscoreevaluatingtextgeneration], plus word/character counts for length comparison.
 
-The second group consists of the RAGAS[@es2023ragasautomatedevaluationretrieval] Metrics[@ragas2024availablemetrics], which adopt a normalized LLM-as-judge strategy. This set includes [Faithfulness](https://docs.ragas.io/en/latest/concepts/metrics/available_metrics/faithfulness/), which corresponds to Groundedness; [Context Relevance](https://docs.ragas.io/en/latest/concepts/metrics/available_metrics/nvidia_metrics/#context-relevance), equivalent to Retrieval Relevance; [Response Relevance](https://docs.ragas.io/en/latest/concepts/metrics/available_metrics/answer_relevance/), which mirrors Relevance; and [Answer Accuracy](https://docs.ragas.io/en/latest/concepts/metrics/available_metrics/nvidia_metrics/), analogous to Correctness. Unlike the binary scoring of the Simple Metrics, RAGAS metrics generally require at least two inference calls per evaluation. For instance, where Simple Correctness offers a binary score, RAGAS Answer Accuracy involves independent judgments that are normalized into 0.25-increment scores, resulting in more stable mean values across the evaluation set.
-
-Additional metrics further complemented these evaluations. This group includes the [DeepEval G-Eval](https://www.deepeval.com/docs/metrics-llm-evals) framework, which leverages chain-of-thought reasoning to assess almost any use case with human-like accuracy, and [DeepEval Faithfulness](https://www.deepeval.com/docs/metrics-faithfulness), which focuses on measuring contradictions between the generated output and the retrieval context rather than hallucinations within the LLM itself (DeepEval suggests that this metric measures hallucination in RAG systems). Moreover, [BERTScore](https://github.com/Tiiiger/bert_score) was used to determine semantic similarity between the response and the reference, while word count and character count served as heuristic measures to compare the lengths of the outputs with the reference answers.
-
-Testing was carried out on 78 domain-specific questions with established reference answers. Every experimental configuration processed all these questions, with statistical significance determined through ANOVA tests (reporting F-values and p-values), pairwise t-tests, and regression analyses to uncover correlations between configuration choices and performance outcomes. For the LLM-as-judge evaluations (which constituted 10 of the 13 metrics) I used GPT-4o as the judge model.
-
-Metric selection evolved throughout the research process. I initially developed the Simple Metrics based on the fundamental relationships among the input question, retrieved contexts, output answer, and reference answer. However, subsequent research revealed that employing the normalized RAGAS metrics offered a more robust evaluation framework. To further validate these methods, I incorporated the DeepEval framework, particularly its G-Eval metric, which consistently aligned with my human judgment.
+Testing used 78 domain-specific questions with reference answers, assessing statistical significance through ANOVA tests, pairwise t-tests, and regression analyses. GPT-4o served as the judge model for all LLM-as-judge evaluations. While Simple Metrics use a single inference request producing binary scores, RAGAS metrics involve multiple inference calls with normalized scores (0.25 increments), providing more stable means across the evaluation set. The DeepEval G-Eval metric particularly aligned with human judgment through its chain-of-thought reasoning.
 
 # Results and Findings
 
